--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,81 @@
 </head>
 <body>
 
-    <h1>Playfair Display</h1>
 
+    <header class="header">
+    <!-- Header -->
+        <div class="header_top">
+            <div class="big-container">
+                <div class="header_top_content">
+                    <div class="header_top_content_left">
+                        <menu class="social">
+                            <li><a href="#"><img src="img/Icon/Small/Vk.svg" width="33px" height="33px" alt="Меню"></a></li>
+                            <li><a href="#"><img src="img/Icon/Small/Facebook.svg" width="33px" height="33px" alt="Меню"></a></li>
+                            <li><a href="#"><img src="img/Icon/Small/Instagram.svg" width="33px" height="33px" alt="Меню"></a></li>
+                        </menu>                
+                        <menu class="links">
+                            <li><a class="light-thirteen" href="#">Оплата и доставка</a></li>
+                            <li><a class="light-thirteen" href="#">Как купить?</a></li>
+                            <li><a class="light-thirteen" href="#">Поддержка</a></li>
+                        </menu>                
+                    </div>
+                    <div class="header_top_content_right">
+                        <div class="phone">
+                            <i><img src="img/Icon/Small/Phone.svg" width="33px" height="33px" alt="Меню"></i>
+                            <p class="light-thirteen">+375 99 999 99 99</p>
+                        </div>
+                        <div class="time_work">
+                            <i><img src="img/Icon/Small/Clock.svg" width="33px" height="33px" alt="Меню"></i>
+                            <p class="light-thirteen">c 9:00 до 17:00 (пн-пт)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="header_bottom">
+            <div class="big-container">
+                <div class="header_bottom_content">
+                    <div class="header_bottom_content_left">
+                        <menu class="main-links">
+                            <li><div class="burger"><img src="img/Icon/Menu.svg" width="45px" height="45px" alt="Меню"></div></li>
+                            <li><a href="#">Главная</a></li>
+                            <li><a href="#">Товары</a></li>
+                            <li><a href="#">Контакты</a></li>
+                            <li><a href="#">О нас</a></li>
+                        </menu>
+                    </div>
+                    <div class="header_bottom_content_center">
+                        <img src="img/Logo.svg" width="100px" height="100px" alt="Логотип">
+                    </div>
+                    <div class="header_bottom_content_right">
+                        <menu class="main-links">
+                            <li><a href="#">Войти</a></li>
+                            <li><div class="search"><img src="img/Icon/Search.svg" width="45px" height="45px" alt="Поиск"></div></li>
+                            <li><div class="cart"><img src="img/Icon/Cart.svg" width="45px" height="45px" alt="Корзина"></div></li>
+                            <li><div class="like"><img src="img/Icon/Like.svg" width="45px" height="45px" alt="Понравившиеся"></div></li>
+                        </menu>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!-- Header -->
+    </header>
+
+    <main class="main">
+    <!-- Main -->
+        <div class="container">
+            <h1>Playfair Display</h1>
+        </div>
+    <!-- Main -->
+    </main>
+    
+    <footer class="footer">
+    <!-- Footer -->
+
+
+    <!-- Footer -->
+    </footer>
 
 
     <!-- Scripts -->
