--- a/app/index.html
+++ b/app/index.html
@@ -29,11 +29,11 @@
                     </div>
                     <div class="header_top_content_right">
                         <div class="phone">
-                            <i><img src="img/Icon/Small/Phone.svg" width="33px" height="33px" alt="Меню"></i>
-                            <p class="light-thirteen">+375 99 999 99 99</p>
+                            <img src="img/Icon/Small/Phone.svg" width="33px" height="33px" alt="Меню">
+                            <p class="light-thirteen">+375 99 999 99 98</p>
                         </div>
                         <div class="time_work">
-                            <i><img src="img/Icon/Small/Clock.svg" width="33px" height="33px" alt="Меню"></i>
+                            <img src="img/Icon/Small/Clock.svg" width="33px" height="33px" alt="Меню">
                             <p class="light-thirteen">c 9:00 до 17:00 (пн-пт)</p>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         <img src="img/Logo.svg" width="100px" height="100px" alt="Логотип">
                     </div>
                     <div class="header_bottom_content_right">
-                        <menu class="main-links">
+                        <menu class="user-links">
                             <li><a href="#">Войти</a></li>
                             <li><div class="search"><img src="img/Icon/Search.svg" width="45px" height="45px" alt="Поиск"></div></li>
                             <li><div class="cart"><img src="img/Icon/Cart.svg" width="45px" height="45px" alt="Корзина"></div></li>
@@ -70,14 +70,30 @@
     <!-- Header -->
     </header>
 
+
+
     <main class="main">
     <!-- Main -->
-        <div class="container">
-            <h1>Playfair Display</h1>
-        </div>
+
+
+        <section class="slider">
+            <div class="container">
+                <h1>Playfair Display</h1>
+            </div>
+        </section>
+
+        <section class="test">
+            <div class="container">
+                
+            </div>
+        </section>
+
+
     <!-- Main -->
     </main>
     
+
+
     <footer class="footer">
     <!-- Footer -->
 
