--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        1
+                        <div class="footer__form__container">
+                            <div class="section-text">
+                                <h2 class="section-text__title h2-style">Подпишись на нас и получи 10% скидки!</h2>
+                                <p class="seciton-text__description regular-fiveteen">Подпишитесь и получайте больше скидок на весь ассортимент наших товаров!</p>
+                            </div>
+                            <form class="form" action="/">
+                                <div class="form__input-item">
+                                    <label class="form__input-item__label">Email</label>
+                                    <input class="form__input-item__email" type="text" placeholder="">
+                                </div>
+                                <button class="form__button">Подписаться</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
