--- a/app/index.html
+++ b/app/index.html
@@ -127,14 +127,65 @@
 
 
         <section class="slider">
-            <div class="container">
-                <h1>Playfair Display</h1>
-            </div>
+            <div class="slick-slider">
+                <!-- Slick Slider-->
+                <div class="slick-slider__item">
+                    <img class="slick-slider__item__img" width="100%" height="100%" src="img/slide-1.jpg" alt="Slider Img">
+                    <div class="slick-slider__item__content">
+                        <h2 class="title-slider h1-style">Мне кажется, что выбор дизайнером этих значений не случаен</h2>
+                        <div class="description">
+                            <p class="description__text regular-seventeen">В тексте заголовка (см. выше) используется полужирное начертание Futura 48px, 45px. Возможно вы уже заметили, что иногда я специально акцентирую ваше внимание на кегле шрифтов и межстрочных</p>
+                            <a class="line-button" href="#">Перейти</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="slick-slider__item">
+                    <img class="slick-slider__item__img" width="100%" height="100%" src="img/slide-2.jpg" alt="Slider Img">
+                    <div class="slick-slider__item__content">
+                        <h2 class="title-slider h1-style">Мне кажется, что выбор дизайнером этих значений не случаен</h2>
+                        <div class="description">
+                            <p class="description__text regular-seventeen">В тексте заголовка (см. выше) используется полужирное начертание Futura 48px, 45px. Возможно вы уже заметили, что иногда я специально акцентирую ваше внимание на кегле шрифтов и межстрочных</p>
+                            <a class="line-button" href="#">Перейти</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slick Slider-->
+              </div>
         </section>
 
-        <section class="test">
+        <section class="category">
             <div class="container">
-                
+                <div class="row">
+                    <div class="col">
+                        <div class="category__cart">
+                            <img src="/" alt="Image Category">
+                            <div class="category__cart__text">
+                                <h2 class="cart-title h2-style">Пледы</h2>
+                                <a class="fill-button" href="#">Посмотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="category__cart">
+                            <img src="/" alt="Image Category">
+                            <div class="category__cart__text">
+                                <h2 class="cart-title h2-style">Пледы</h2>
+                                <a class="fill-button" href="#">Посмотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="category__cart">
+                            <img src="/" alt="Image Category">
+                            <div class="category__cart__text">
+                                <h2 class="cart-title h2-style">Пледы</h2>
+                                <p class="cart-description">Посмотреть остальные категории :)</p>
+                                <a class="fill-button" href="#">Посмотреть</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -177,19 +228,19 @@
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
-                                        <a class="list-title" href="#">Покупателям</a>
+                                        <a class="list-title medium-ninteen" href="#">Покупателям</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Доставка и оплата</a>
+                                        <a class="light-seventeen" href="#">Доставка и оплата</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Возврат</a>
+                                        <a class="light-seventeen" href="#">Возврат</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Отзывы</a>
+                                        <a class="light-seventeen" href="#">Отзывы</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Как купить?</a>
+                                        <a class="light-seventeen" href="#">Как купить?</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -198,19 +249,19 @@
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
-                                        <a class="list-title" href="#">Информация</a>
+                                        <a class="list-title medium-ninteen" href="#">Информация</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">О компании</a>
+                                        <a class="light-seventeen" href="#">О компании</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Контакты</a>
+                                        <a class="light-seventeen" href="#">Контакты</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Вакансии</a>
+                                        <a class="light-seventeen" href="#">Вакансии</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Поддержка?</a>
+                                        <a class="light-seventeen" href="#">Поддержка?</a>
                                     </li>
                                 </ul>
                             </nav>
@@ -219,46 +270,44 @@
                             <nav class="footer-menu">
                                 <ul class="footer-menu__list">
                                     <li class="footer-menu__list__item">
-                                        <a class="list-title" href="#">Магазин</a>
+                                        <a class="list-title medium-ninteen" href="#">Магазин</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Пледы</a>
+                                        <a class="light-seventeen" href="#">Пледы</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Одеяла</a>
+                                        <a class="light-seventeen" href="#">Одеяла</a>
                                     </li>
                                     <li class="footer-menu__list__item">
-                                        <a href="#">Подушки</a>
+                                        <a class="light-seventeen" href="#">Подушки</a>
                                     </li>
                                 </ul>
                             </nav>
                         </div>
                         <div class="col">
-                            <div class="col">
-                                <nav class="footer-menu">
-                                    <ul class="footer-menu__list">
-                                        <li class="footer-menu__list__item">
-                                            <a class="list-title" href="#">Социальные сети</a>
-                                        </li>
-                                        <li class="footer-menu__list__item">
-                                            <p>И получите бесплатную доставку для всех ваших заказов!</p>
-                                        </li>
-                                        <li class="footer-menu__list__item">
-                                            <ul class="sub-menu-social">
-                                                <li class="sub-menu-social__item">
-                                                    <img src="img/Icon/Small/Vk.svg">
-                                                </li>
-                                                <li class="sub-menu-social__item">
-                                                    <img src="img/Icon/Small/Facebook.svg">
-                                                </li>
-                                                <li class="sub-menu-social__item">
-                                                    <img src="img/Icon/Small/Instagram.svg">
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </nav>
-                            </div>
+                            <nav class="footer-menu">
+                                <ul class="footer-menu__list">
+                                    <li class="footer-menu__list__item">
+                                        <a class="list-title medium-ninteen" href="#">Социальные сети</a>
+                                    </li>
+                                    <li class="footer-menu__list__item">
+                                        <p class="list-description light-seventeen">И получите бесплатную доставку для всех ваших заказов!</p>
+                                    </li>
+                                    <li class="footer-menu__list__item">
+                                        <ul class="sub-menu-social">
+                                            <li class="sub-menu-social__item">
+                                                <a href="#"><img src="img/Icon/Dark/Vk.svg"></a>
+                                            </li>
+                                            <li class="sub-menu-social__item">
+                                                <a href="#"><img src="img/Icon/Dark/Facebook.svg"></a>
+                                            </li>
+                                            <li class="sub-menu-social__item">
+                                                <a href="#"><img src="img/Icon/Dark/Instagram.svg"></a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </nav>
                         </div>
                     </div>
                 </div>
@@ -270,19 +319,19 @@
                             <nav class="footer-menu-bottom">
                                 <ul class="footer-menu-bottom__list">
                                     <li class="footer-menu-bottom__list__item">
-                                        <a href="#">Постовщикам</a>
+                                        <a class="lights-fiveteen" href="#">Постовщикам</a>
                                     </li>
                                     <li class="footer-menu-bottom__list__item">
-                                        <a href="#">Как купить?</a>
+                                        <a class="lights-fiveteen" href="#">Как купить?</a>
                                     </li>
                                     <li class="footer-menu-bottom__list__item">
-                                        <a href="#">Поддержка</a>
+                                        <a class="lights-fiveteen" href="#">Поддержка</a>
                                     </li>
                                 </ul>
                             </nav>
                         </div>
                         <div class="col">
-                            <p>©2020 — Все права защищены</p>
+                            <p class="footer-text-bottom lights-fiveteen">©2020 — Все права защищены</p>
                         </div>
                     </div>
                 </div>
